[gd_scene load_steps=2 format=3 uid="uid://jl7gul5xihvr"]

[ext_resource type="Script" uid="uid://dnv1eit04aipo" path="res://scripts/title_menu.gd" id="1_ij6cu"]

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij6cu")

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_left = 35.0
offset_top = 29.0
offset_right = 75.0
offset_bottom = 52.0
text = "SinGame"

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 69.0
offset_right = 76.0
offset_bottom = 100.0
text = "Play"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 543.0
offset_right = 77.0
offset_bottom = 574.0
text = "Quit
"

[node name="TopScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = 29.0
offset_right = -85.0
offset_bottom = 52.0
grow_horizontal = 0
text = "Top Score: _"

[connection signal="pressed" from="Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
